Sunburst colors tweaked.

--- a/sunbursts/index.html
+++ b/sunbursts/index.html
@@ -137,7 +137,9 @@ d3.csv("eth_edu_pivot_profiles.csv", function(error, data) {
       ]);
       color.range([
         "rgb(56,109,164)", "rgb(215,61,61)",
-        "hsl(120, 45%, 70%)", "hsl(120, 45%, 90%)", "hsl(120, 45%, 50%)", "#e6e6e6",
+        'rgb(161,217,155)','rgb(229,245,224)','rgb(49,163,84)', "#e6e6e6",
+        // "hsl(120, 45%, 70%)", "hsl(120, 45%, 90%)", "hsl(120, 45%, 50%)", "#e6e6e6",
+        // 'rgb(173,221,142)','rgb(247,252,185)','rgb(49,163,84)', "#e6e6e6",
         "#ffdbac", "#e6e6e6", "#f1c27d", "#c68642", "#8d5524"
       ]);
 
@@ -292,8 +294,11 @@ d3.csv("ori_rel_pivot_profiles.csv", function(error, data) {
       ]);
       color.range([
         "rgb(56,109,164)", "rgb(215,61,61)",
-        "darkgray", "lightgray", "gray",
-        "red", "orange", "yellow", "green", "blue"
+        'rgb(179,205,227)','rgb(244,202,228)','rgb(222,203,228)',
+        // 'rgb(240,240,240)','rgb(189,189,189)','rgb(99,99,99)',
+        // 'rgb(179,205,227)','rgb(140,150,198)','rgb(136,86,167)',
+        // "darkgray", "lightgray", "gray",
+        'rgb(251,180,174)','rgb(253,174,97)','rgb(255,255,191)','rgb(166,217,106)',"#e6e6e6"
       ]);
 
 
