Templated webpage for each vis.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
   <h1 class="centertext">OKCupid Profiles Data Visualizations</h1>
   <div class="centertext" id="nav">
-    <!-- <a href="vis1.html"><h3>Profile Categories</h3></a> -->
-    <a href="jobincome_linecharts"><h3>Incomes by Job</h3></a>
-    <a href="wordfreq_scatterplot"><h3>Essay Word Frequencies</h3></a>
+    <a href="sunbursts"><h3>Men Vs. Women In Ethnicity and Education</h3></a>
+    <a href="sunbursts"><h3>Men Vs. Women In Orientation and Religion</h3></a>
+    <a href="jobincome_linecharts"><h3>How Much Men Vs. Women Make</h3></a>
+    <a href="wordfreq_scatterplot"><h3>How Men Vs. Women Describe Themselves</h3></a>
   </div>
 
   <br>
